--- a/budget/2020.md
+++ b/budget/2020.md
@@ -187,6 +187,6 @@ Expenses
                                                   
      P/L                                  €143,403
 ```
-Please note, Global AppSec events include at Staff Services charge back that when rolling up to the Foundadtional budget is already accounted for in Staffing Expenses.
+Please note, Global AppSec events include at Staff Services charge back that when rolling up to the FOundational budget is already accounted for in Staffing Expenses.
 
 
