--- a/budget/2020.md
+++ b/budget/2020.md
@@ -127,6 +127,13 @@ Expenses
             Total Expenses                        $4,523,668
             P/L                                     $307,864
 ```
+## Quarterly Plan
+
+```
+                     Q1           Q2           Q3           Q4
+Income         $715,950     $333,450   $1,342,982   $2,453,800
+Expenses       $688,900     $623,350   $1,346,388   $1,665,780
+```
 
 ## Global AppSec San Francisco Budgeted P/L
 
