--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -8,17 +8,17 @@ Draft #3 for Board Review
 
 **Vision: Global and open resource for software security**
 
-**Updated**  Mission Statement: The Open Web Application Security Project (OWASP) is a nonprofit foundation improving the security of software. Through community-led open source software projects, over 260 local chapters worldwide, tens of thousands of members, and leading educational and training conferences, the OWASP Foundation is the source for developers and technologists to secure the web.
+**Updated**  Mission Statement: OWASP is a nonprofit foundation improving the security of software. Through community-led open source software projects, hundreds of local chapters worldwide, tens of thousands of members, and leading educational and training conferences, the OWASP Foundation is the source for developers and technologists to secure the web.
 
 ## Goals
 
-1. Launch updated version of OWASP Top 10 by June 2020.
+1. Promote updated version of OWASP Top 10 set to release in october 2020.
 1. Continue to optimize business operations to overachieve financial and membership targets.
 1. Manage two successful global conferences planning three in 2021.
 1. Launch Project Summits and AppSec Days to over 500 attendees
 1. Increase relevance and reputation of OWASP measured by 10% increase in web traffic.
-1. Improve satisfaction with OWASP by survey measured a 5% increase.
-1. Increase all classes of membership by 25%
+1. Improve satisfaction with OWASP by survey measured a 10% increase.
+1. Increase corporate and individual membership by 25%
 
 <a name="operations"></a>
 ##  Operations 
