--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -8,7 +8,7 @@ Draft #3 for Board Review
 
 **Vision: Global and open resource for software security**
 
-**Updated**  Mission Statement: OWASP is a nonprofit foundation improving the security of software. Through community-led open source software projects, hundreds of local chapters worldwide, tens of thousands of members, and leading educational and training conferences, the OWASP Foundation is the source for developers and technologists to secure the web.
+**Updated**  Mission Statement: OWASP is a nonprofit foundation improving the security of software. Through community-led open source software projects, hundreds of local chapters worldwide, tens of thousands of members, and leading educational and training conferences, the OWASP Foundation is the source for developers and technologists to secure our digital lives.
 
 ## Goals
 
