Added SEO and web dev services for migration

--- a/budget/2020.md
+++ b/budget/2020.md
@@ -43,7 +43,7 @@ function drawChart() {
 
 
 ```
-DRAFT as of 2019-Dec-30
+DRAFT as of 2020-Jan-7
 Income                    
    Conferences                                    
       Registration                                 
@@ -118,13 +118,14 @@ Expenses
          Marketing                                          
          Events Management                                  
          Fundraising & Development                  $210,200
-         Professional Services                      $120,000
+   Professional Services                            $120,000
+   SEO and Services for Web Migration                $50,000
    Bank Service Charges                              $66,000
    Other G&A                                         $60,000
    Software/Internet/Hosting                         $10,000
    Bad Debt                                          $10,000
-            Total Expenses                        $4,525,668
-            P/L                                     $360,864
+            Total Expenses                        $4,575,668
+            P/L                                     $310,864
 ```
 ## Quarterly Plan
 
