Removed "Draft" references

--- a/budget/2020.md
+++ b/budget/2020.md
@@ -5,9 +5,9 @@ layout: full-width
 
 ---
 
-## OWASP 2020 DRAFT Budget
+## OWASP 2020 Budget
 
-Below please find the 2020 Draft budget. We are forecasting a net-profit plan with about 50% growth in Revenue and Expenses. As in historical years, the success of Global Events drive the topline performance for the foundation. With the return to SF and Dublin, along with a full-time Events staff, we believe there is growth in FY20 in this category of the budget compared to FY19. These events not only fufull our mission of education and community, they often give Corporate Supportors additional incentive to financially support the OWASP Foundation.
+Below please find the 2020 budget. We are forecasting a net-profit plan with about 50% growth in Revenue and Expenses. As in historical years, the success of Global Events drive the topline performance for the foundation. With the return to SF and Dublin, along with a full-time Events staff, we believe there is growth in FY20 in this category of the budget compared to FY19. These events not only fufull our mission of education and community, they often give Corporate Supportors additional incentive to financially support the OWASP Foundation.
 
 There is also a [Comparison to FY19 forecasted actuals](/www-staff/budget/2020-compare) for your information. 
 
@@ -43,7 +43,7 @@ function drawChart() {
 
 
 ```
-DRAFT as of 2020-Jan-7
+APPROVED by Board of Directors for 2020
 Income                    
    Conferences                                    
       Registration                                 
