Chapter Operations updated
Also extended deadline for FY2021 conference contracts.

--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -4,7 +4,7 @@ title: OWASP 2020 Operating Plan
 layout: col-sidebar
 
 ---
-Draft #4 for Board Review
+Draft #5 for Board Review
 
 **Vision: Global and open resource for software security**
 
@@ -71,7 +71,7 @@ The Foundation should revisit a modernization and vision-casting on how we can b
 
 <a name="chapter-operations"></a>
 ### Chapter Operations
-Following a refresh of Chapter and Chapter Leader Guidelines, the Foundation will require Leaders to accept an online agreement annually. The Foundation will provide online services like Meetup for Chapters to schedule and manage their Chapter meetings. Semi-annually staff will audit chapter activity to ensure chapter leaders are being good ambassadors of the Foundation in their local community. Per the December 2018 Board Resolution, the Foundation will rework chapter funding toward a Central Fund model for all chapters instead of maintaining local chapter balances. Local chapters will be encouraged to directly solicit sponsors for supporting their chapter meetings.
+Following a refresh of Chapter and Chapter Leader Guidelines, the Foundation will require Leaders to accept an online agreement annually. The Foundation will provide online services like Meetup for Chapters to schedule and manage their Chapter meetings. Semi-annually staff will audit chapter activity to ensure chapter leaders are compliant to Foundation policies for meeting activity. Local chapters will be encouraged to directly solicit sponsors for supporting their chapter meetings.
 
 <a name="individual-membership"></a>
 ### Individual Membership
@@ -117,7 +117,7 @@ Minimally twice each year, with one each in different geographies, the Foundatio
 
 <a name="global-appse"></a>
 ### Global AppSec Events
-Each year the Foundation will develop and host Global AppSec events. This year the Foundation will host two; one in June in Dublin and the other in October in San Francisco. Before March 1, the Foundation will have locations, dates, and signed venue agreements for three 2021 events one each of U.S., Europe, and Asia. Each event will continue using previous formats that include keynotes, session tracks, and in-person training. Event budgets shall project at least 30% profit margin for the Foundation and will include deep registration discounts for chapter and project leaders.
+Each year the Foundation will develop and host Global AppSec events. This year the Foundation will host two; one in June in Dublin and the other in October in San Francisco. Before April 1, the Foundation will have locations, dates, and signed venue agreements for three 2021 events one each of U.S., Europe, and Asia. Each event will continue using previous formats that include keynotes, session tracks, and in-person training. Event budgets shall project at least 30% profit margin for the Foundation and will include deep registration discounts for chapter and project leaders.
 
 <a name="global-team"></a>
 ### Global AppSec Program Team
