--- a/operating-plan/2020.md
+++ b/operating-plan/2020.md
@@ -4,11 +4,8 @@ title: OWASP 2020 Operating Plan
 layout: col-sidebar
 
 ---
-Draft #5 for Board Review
 
 **Vision: Global and open resource for software security**
-
-**Updated**  Mission Statement: OWASP is a nonprofit foundation improving the security of software. Through community-led open source software projects, hundreds of local chapters worldwide, tens of thousands of members, and leading educational and training conferences, the OWASP Foundation is the source for developers and technologists to secure our digital lives.
 
 ## Goals
 
@@ -169,3 +166,5 @@ A potential new revenue source for the Foundation could be online training. In t
 <a name="underserved"></a>
 ### Underserved Communities
 In all of the Foundation’s work, we shall strive to be inclusive of underserved communities like students, women in technology, and those living in developing economies. Our membership and event registration pricing should always include accommodations for these communities. Additionally a plan shall be developed to increase participation by 25% in each of these communities in the work of the Foundation.
+
+Adopted by the Board of Directors 2020-02-18
