--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -26,7 +26,7 @@ Use this section for important links for projects/events that visitors will need
 
 ## Milestones
 
-- [ ] In an unordered list (billeted) list major milestones in chronological order
+- [ ] 2020-03-01, Call for Vendors application will be accepted
 - [ ] Use the syntax of 2019-01-19, Milestone name, [Name of Owner]
 - [x] When milestones are completed, mark them with an "x"
 - [ ] A milestone isn't everyone’s to-do list, it is the high level tasks of the project
