Budget and milestones

--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -26,13 +26,12 @@ Use this section for important links for projects/events that visitors will need
 
 ## Milestones
 
-- [ ] 2020-03-01, Call for Vendors application will be accepted
-- [ ] Use the syntax of 2019-01-19, Milestone name, [Name of Owner]
-- [x] When milestones are completed, mark them with an "x"
-- [ ] A milestone isn't everyone’s to-do list, it is the high level tasks of the project
-- [ ] If you have more than 30 milestones, you’re being too granular
-- [x] 2019-09-22, Action item completed, [All]
-- [x] 2019-09-30, You can leave the box UNCHECKED if not completed but you must edit page to change state, [All]
+- [X] 2020-03-02 DEFCON 28 Vendor Application opens
+- [x] 2020-03-05, Submission of Vendor Application [Jon and or Lisa]
+- [ ] 
+- [ ]
+- [ ] 
+- [ ] 
 
 ## Leadership
 
@@ -40,9 +39,19 @@ Use this section for important links for projects/events that visitors will need
 
 ## Budget
 
-Description            | Amount
---------------         | ----:
-**Expenses**           | 
-Item 1                 | $ 10
-Item 2                 | $ 10 
-***Total Expenses**    | **$ 100**
+Description                              | Amount
+--------------                           | ----:
+**Expenses**                             | 
+8x8 inline table*                        | $1170.00 (includes 1 badge)
+Badge(s) $320ea.                         | $1920.00 (2019= 4 Volunteers + 2 staff)
+Artwork                                  | $1500.00 (2019)
+Stickers                                 | $819.00 (2019)
+Promotional Merch?                       | $6220.00 (750 t-shirts, <$8 2019)
+Tablecloth?                              | $250.00 (estimate)
+Postcard & Artwork (Promote San Fran)    | $1000.00 (estimate)
+Travel & Hotel                           | $5000.00 (2 staff)
+
+
+***Total Expenses**    | **$17,879.00**
+*All tables will be 6 feet x 30 inches with linens.
+# No sponsoring of party at or during eventTalso, NO chapter meeting at or during the event.
