hotel, overview and milestones

--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -3,20 +3,29 @@
 title: DEFCON 28
 layout: full-width
 date: August 6-9, 2020
+August 6, 2020 Table setup only
+August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
+August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
 
----
+# Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
+Harrah's Las Vegas
+3475 Las Vegas Boulevard South
+Las Vegas, NV 89109, 
 
 # DEFCON 28
 
 ## Overview
+25K to 28K Attendees previous year
+CASH ONLY
+NO pre-registration
+$320 per Badge 
+ONLY ONE BADGE AVAILABLE for Event
+NO DISCOUNTS
 
-Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.
 
 ## Project Links
 
-Use this section for important links for projects/events that visitors will need. For instance, if this is an event, links to CFT, CPT and registration is handy If there is a microsite, that would be good to link to as well 
-* [Example link to Google](https://google.com)
-* [Example relative link to Blank Template Page](/www--staff/Projects/202001-template)
+https://defcon.org/index.html
 
 ## Goals
 
@@ -27,17 +36,18 @@ Use this section for important links for projects/events that visitors will need
 ## Milestones
 
 - [X] 2020-03-02 DEFCON 28 Vendor Application opens
-- [x] 2020-03-05, Submission of Vendor Application [Jon and or Lisa]
-- [ ] 
-- [ ]
-- [ ] 
-- [ ] 
-
+- [X] 2020-03-03 Email sent to Jon to inquiry if he would like to participate. 
+- [ ] 2020-03-06 Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0 [Mike]
+- [ ] 2020-03-05, Submission of Vendor Application [Jon and or Lisa]
+- [ ] 2020 Artwork - (stickers, t-shirts?, postcard) 
+- [ ] 2020 Confirm and approve all artwork 
+- [ ] 2020 Volunteers identified and approved
+- [ ] 2020 All material ordered by the Foundation for delivery to Harrah's 3475 Las Vegas Boulevard South Las Vegas, NV 89109, US
 ## Leadership
 
 * [Lisa Jones](mailto:lisa.jones@owasp.com?subject=DEFCON%20Project)
 
-## Budget
+## Budget - Draft
 
 Description                              | Amount
 --------------                           | ----:
