--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -3,9 +3,12 @@
 title: DEFCON 28
 layout: full-width
 date: August 6-9, 2020
-August 6, 2020 Table setup only
-August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
-August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
+
+---
+
+- August 6, 2020 Table setup only
+- August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
+- August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
 
 # Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
 Harrah's Las Vegas
@@ -37,12 +40,13 @@ https://defcon.org/index.html
 
 - [X] 2020-03-02 DEFCON 28 Vendor Application opens
 - [X] 2020-03-03 Email sent to Jon to inquiry if he would like to participate. 
-- [ ] 2020-03-06 Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0 [Mike]
-- [ ] 2020-03-05, Submission of Vendor Application [Jon and or Lisa]
+- [ ] 2020-03-06 Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
+- [ ] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [ ] 2020 Artwork - (stickers, t-shirts?, postcard) 
 - [ ] 2020 Confirm and approve all artwork 
 - [ ] 2020 Volunteers identified and approved
 - [ ] 2020 All material ordered by the Foundation for delivery to Harrah's 3475 Las Vegas Boulevard South Las Vegas, NV 89109, US
+
 ## Leadership
 
 * [Lisa Jones](mailto:lisa.jones@owasp.com?subject=DEFCON%20Project)
@@ -62,6 +66,7 @@ Postcard & Artwork (Promote San Fran)    | $1000.00 (estimate)
 Travel & Hotel                           | $5000.00 (2 staff)
 
 
-***Total Expenses**    | **$17,879.00**
+**Total Expenses**    | **$17,879.00**
+
 *All tables will be 6 feet x 30 inches with linens.
 # No sponsoring of party at or during eventTalso, NO chapter meeting at or during the event.
