--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -10,20 +10,16 @@ date: August 6-9, 2020
 - August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
 - August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
 
-# Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
-Harrah's Las Vegas
-3475 Las Vegas Boulevard South
-Las Vegas, NV 89109, 
 
 # DEFCON 28
 
 ## Overview
-25K to 28K Attendees previous year
-CASH ONLY
-NO pre-registration
-$320 per Badge 
-ONLY ONE BADGE AVAILABLE for Event
-NO DISCOUNTS
+- 25K to 28K Attendees previous year
+- CASH ONLY
+- NO pre-registration
+- $320 per Badge 
+- ONLY ONE BADGE AVAILABLE for Event
+- NO DISCOUNTS
 
 
 ## Project Links
@@ -50,6 +46,13 @@ https://defcon.org/index.html
 ## Leadership
 
 * [Lisa Jones](mailto:lisa.jones@owasp.com?subject=DEFCON%20Project)
+
+## Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
+````
+Harrah's Las Vegas
+3475 Las Vegas Boulevard South
+Las Vegas, NV 89109, 
+```
 
 ## Budget - Draft
 
