--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -35,9 +35,9 @@ https://defcon.org/index.html
 ## Milestones
 
 - [X] 2020-03-02 DEFCON 28 Vendor Application opens
-- [X] 2020-03-03 Email sent to Jon to inquiry if he would like to participate. 
+- [X] 2020-03-03 Email sent to Jon to inquiry if he would like to participate. No response
 - [ ] 2020-03-06 Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
-- [ ] 2020-03-05, Submission of Vendor Application, [Lisa]
+- [X] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [ ] 2020 Artwork - (stickers, t-shirts?, postcard) 
 - [ ] 2020 Confirm and approve all artwork 
 - [ ] 2020 Volunteers identified and approved
