--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -48,7 +48,7 @@ https://defcon.org/index.html
 * [Lisa Jones](mailto:lisa.jones@owasp.com?subject=DEFCON%20Project)
 
 ## Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
-````
+```
 Harrah's Las Vegas
 3475 Las Vegas Boulevard South
 Las Vegas, NV 89109, 
@@ -73,3 +73,77 @@ Travel & Hotel                           | $5000.00 (2 staff)
 
 *All tables will be 6 feet x 30 inches with linens.
 # No sponsoring of party at or during eventTalso, NO chapter meeting at or during the event.
+
+### Application 2020
+
+---------- Forwarded message ---------
+From: Lisa Jones <lisa.jones@owasp.com>
+Date: Wed, Mar 4, 2020 at 8:04 PM
+Subject: DEF CON 28 Vendor Application
+To: <vendors@defcon.org>
+
+
+Business Legal Name: OWASP Foundation
+Street Address:  1200-C Agora Drive, #232 Bel Air, MD 21014
+Contact Name Prior to the Convention: Lisa Jones 
+Contact Email Prior to the Convention: lisa.jones@owasp.com
+Phone Number Prior to the Convention: 910-408-2147
+Onsite Contact Name, If Different: TBD
+Phone Number During Convention, If Different: TBD
+Email During the Convention, If Different TBD:
+
+Are you selling items? (Yes or No): No
+
+NOTE: To sell items, sales taxes must be paid onsite to the NV department of Taxation by check (no cash) on Sunday before teardown. The sales tax paperwork will be provided at badge pick up. To claim exempt, you must provide proper proof of non-profit status prior to set up. If applicable, please provide the NV Tax ID Number. Effective January 1, 2020, the sales and use tax rate increases to 8.375%.
+
+What will you be vending? Provide a link to samples, if applicable.
+https://owasp.org/projects/
+
+Reason(s) that this vendor/merchandise is appropriate for and adds value to the DEF CON vendor area: We will be providing a give away to individuals that make a donation to the OWASP Foundation.
+
+Are you accepting donations? (Yes or No): Yes
+Have you been a vendor at DEF CON before?  
+If so, what was your last DC? DefCon 27 and DefCon 26
+
+Please provide a brief, one paragraph blurb to use for publication in the DC program and on the DC web site, if accepted:
+The OWASP Foundation is a 501(c)3 nonprofit (whitehat) application security group. Our open-source community projects focus on the security of software such as ZAP (a widely used web page security scanner) & OWASP Top 10 (a direct contributor to PCI). We are a global community of over 275 chapters, and tens of thousands of members, that provides industry-leading educational and training conferences annually.  
+
+Please include a logo for use in the printed program and on the website.  Logo attached.
+
+Provide a specific description of any sort of activities such as signings, prize giveaways (skilled or luck) that could create a line. Do you have an idea on timing? 
+Diversity Initiative: (Available to the first "x" number of women to donate to the Foundation).
+Giveaway: 
+Global AppSec Conference Voucher(s) to the first "X" number of women. ($895.00 value per ticket) 2020 Conferences in Dublin and San Francisco
+Travel Assistance Grant(s) worth $ X will also be available to apply for.  
+Please give schedule estimates (please include day, approximate time, and duration) and any assistance for line maintenance that may be required. Upon acceptance, we will contact you for a full schedule.  The Diversity Initiative giveaway will start when the vendor hall opens August 7th until the set amount has been given away.  We will not require assistance with line maintenance.  
+All individuals that make a Donation to the OWASP Foundation will be given a thank you gift that was specially designed for the DefCon event.  We will also be giving away specially designed stickers for the DefCon event.
+
+Please provide a description or photos of your physical booth. (Table only or built structure) Table and chair; no structure will be built.
+
+
+Does your booth set up require you to be by a wall or at the end of a row? No
+
+Will you be shipping any pallets? No
+
+Illustration of Different Booth Size Options Available
+Examples of booth sizes only, this is NOT vendor room layout.
+Prices per space include: 24 Hour Security, 1 Vendor Badge
+
+8x8 inline $1170
+
+IMPORTANT NOTE: The above dimensions are the amount of floor space.
+All tables will be 6 feet x 30 inches with linens.
+
+Additional Options
+Internet Access 400 Yes/No: No
+Power for Booth 250 Yes/No: No
+Phone 290 Yes/No: No
+Bannerr Hung* 290 Quantity: No
+Additional DC Badge 320 Quantity: 6
+
+I will need an invoice to submit to send a payment for the booth and extra tickets if we are chosen.
+
+Thanks for your support. 
+Lisa Jones
+lisa.jones@owasp.com
+The OWASP Foundation
