--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -38,6 +38,8 @@ https://defcon.org/index.html
 - [X] 2020-03-03 Email sent to Jon to inquiry if he would like to participate. No response
 - [ ] 2020-03-06 Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
+- [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
+- [ ] 2020-06-01, Application accepted Go or NO Go 
 - [ ] 2020 Artwork - (stickers, t-shirts?, postcard) 
 - [ ] 2020 Confirm and approve all artwork 
 - [ ] 2020 Volunteers identified and approved
@@ -72,9 +74,10 @@ Travel & Hotel                           | $5000.00 (2 staff)
 **Total Expenses**    | **$17,879.00**
 
 *All tables will be 6 feet x 30 inches with linens.
-# No sponsoring of party at or during eventTalso, NO chapter meeting at or during the event.
+## No sponsoring of party at or during event, NO chapter meeting at or during the event.
 
-### Application 2020
+
+## Application 2020
 
 ---------- Forwarded message ---------
 From: Lisa Jones <lisa.jones@owasp.com>
