--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -74,7 +74,7 @@ Travel & Hotel                           | $5000.00 (2 staff)
 **Total Expenses**    | **$17,879.00**
 
 *All tables will be 6 feet x 30 inches with linens.
-## No sponsoring of party at or during event, NO chapter meeting at or during the event.
+*No sponsoring of party at or during event, NO chapter meeting at or during the event.
 
 
 ## Application 2020
