--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -5,12 +5,6 @@ layout: full-width
 date: August 6-9, 2020
 
 ---
-
-- August 6, 2020 Table setup only
-- August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
-- August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
-
-
 # DEFCON 28
 
 ## Overview
@@ -20,6 +14,11 @@ date: August 6-9, 2020
 - $320 per Badge 
 - ONLY ONE BADGE AVAILABLE for Event
 - NO DISCOUNTS
+
+## Hours/Schedule
+- August 6, 2020 Table setup only
+- August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
+- August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
 
 
 ## Project Links
@@ -34,11 +33,11 @@ https://defcon.org/index.html
 
 ## Milestones
 
-- [X] 2020-03-02 DEFCON 28 Vendor Application opens
-- [X] 2020-03-03 Email sent to Jon to inquiry if he would like to participate. No response
-- [ ] 2020-03-06 Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
+- [X] 2020-03-02 ,DEFCON 28 Vendor Application opens
+- [X] 2020-03-03, Email sent to Jon to inquiry if he would like to participate. No response
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
+- [ ] 2020-04-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
 - [ ] 2020-06-01, Application accepted Go or NO Go 
 - [ ] 2020 Artwork - (stickers, t-shirts?, postcard) 
 - [ ] 2020 Confirm and approve all artwork 
