--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -21,15 +21,10 @@ date: August 6-9, 2020
 - August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
 
 
-## Project Links
+## Event site Link
 
 https://defcon.org/index.html
 
-## Goals
-
-1. Include top-level goals of the project in an ordered list
-2. Give thought to the ordering of goals. Revenue, attendance, launch date
-3. Make sure goals are measurable from undisputed source
 
 ## Milestones
 
