--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -25,6 +25,9 @@ date: August 6-9, 2020
 
 https://defcon.org/index.html
 
+## Booth Inventory
+- 2,500 Sticker sheets (maybe collateral on back)
+- 1,000 Shirts
 
 ## Milestones
 
